# gerbertools

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.py
.github/workflows/: assets.yml  test.yml
include/gerbertools/: aperture.hpp  aperture_macro.hpp  clipper.hpp  color.hpp  coord.hpp  earcut.hpp  gerber.hpp  ncdrill.hpp  netlist.hpp  obj.hpp  path.hpp  pcb.hpp  plot.hpp  svg.hpp  version.hpp
python/gerbertools/: __init__.py  __main__.py
python/manylinux/: Makefile
src/: aperture.cpp  aperture.hpp  aperture_macro.cpp  aperture_macro.hpp  clipper.cpp  color.hpp  coord.cpp  coord.hpp  gerber.cpp  gerber.hpp  main.cpp  ncdrill.cpp  ncdrill.hpp  netlist.cpp  obj.cpp  path.cpp  path.hpp  pcb.cpp  pcb.hpp  plot.cpp  plot.hpp  pymod.cpp  svg.cpp
tests/: test.csv  test_boards.py
tests/Einsy-Rambo-1.2b/: README.md
tests/system76-launch-1.3/: README.md  launch-B_Cu.gbr  launch-B_Mask.gbr  launch-B_SilkS.gbr  launch-Edge_Cuts.gbr  launch-F_Cu.gbr  launch-F_Mask.gbr  launch-F_SilkS.gbr  launch-In1_Cu.gbr  launch-In2_Cu.gbr  launch-NPTH.drl  launch-PTH.drl
